--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     -->
     <script src="./assets/js/global.js" defer></script>
     <script src="./assets/js/index.js" type="module"></script>
+
+
 </head>
 
 <body>
@@ -70,273 +72,18 @@
     <!-- 
         - #SIDEBAR
     -->
-    <nav class="sidebar" sidebar>
-        <div class="sidebar-inner">
-
-            <div class="sidebar-list">
-                <p class="title">Genre</p>
-
-                <a href="./movie-list.html" menu-close class="sidebar-link">Action</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Horror</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Comedy</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Adventure</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Drama</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Sci-Fi</a>
-            </div>
-
-            <div class="sidebar-list">
-                <p class="title">Language</p>
-
-                <a href="./movie-list.html" menu-close class="sidebar-link">English</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Bengali</a>
-            </div>
-
-            <div class="sidebar-footer">
-                <p class="copyright">
-                    Copyright 2023 <a href="https://t.me/Mexrob_Ako">Mehrob Dev</a>
-                </p>
-
-                <img src="./assets/images/tmdb-logo.png" width="130" height="17" alt="the movie database logo">
-            </div>
-
-        </div>
-    </nav>
+    <nav class="sidebar" sidebar></nav>
     <div class="overlay" overlay menu-toggler></div>
 
 
 
 
 
-    <article class="container" page-content>
+    <article class="container" page-content></article>
 
-        <!-- 
-            - #BANNER
-        -->
 
-        <section class="banner" aria-label="popular movies">
-            <div class="banner-slider">
 
-                <div class="slider-item active" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
 
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-
-                <div class="slider-item" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
-
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-
-                <div class="slider-item" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
-
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-
-                <div class="slider-item" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
-
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-
-                <div class="slider-item" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
-
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-                
-                <div class="slider-item" slider-item>
-                    <img src="./assets/images/slider-banner.jpg" alt="Puss in Boots: The Last Wish" class="img-cover"
-                        loading="eager">
-
-                    <div class="banner-content">
-
-                        <h2 class="heading">Puss in Boots: The Last Wish</h2>
-
-                        <div class="meta-list">
-                            <div class="meta-item">2022</div>
-
-                            <div class="meta-item card-badge">7.5</div>
-                        </div>
-
-                        <p class="genre">Animation, Action, Adventure</p>
-
-                        <p class="banner-text">
-                            Puss in Boots discovers that his passion for adventure has taken its toll: He has burned
-                            through eight of his nine lives, leaving him with only one life left. Puss sets out on an
-                            epic journey to find the mythical Last Wish and restore his nine lives.
-                        </p>
-
-                        <a href="./detail.html" class="btn">
-                            <img src="./assets/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
-
-                            <span class="span">Watch Now</span>
-                        </a>
-
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="slider-control">
-                <div class="control-inner">
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                    <button class="poster-box slider-item active">
-                        <img src="./assets/images/slider-control.jpg" alt="Slide to Puss in Boots: The Last Wish" loading="lazy" draggable="false">
-                    </button>
-
-                </div>
-            </div>
-        </section>
-
-    </article>
 
 </body>
 
