--- a/detail.html
+++ b/detail.html
@@ -65,147 +65,22 @@
         </button>
     </header>
 
-    <!-- 
-        - #SIDEBAR
-    -->
-    <nav class="sidebar" sidebar></nav>
-    <div class="overlay" overlay menu-toggler></div>
 
 
+    <main>
 
-
-    <article class="container" page-content>
-
-
-        
         <!-- 
-            - #MOVIE LIST
+         - #SIDEBAR
         -->
-        <section class="movie-list" aria-label="upcoming movie">
+        <nav class="sidebar" sidebar></nav>
+        <div class="overlay" overlay menu-toggler></div>
 
-            <div class="title-wraper">
-                <h3 class="title-large">You May Also Like</h3>
-            </div>
 
-            <div class="slider-list">
-                <div class="slider-inner">
 
-                    <div class="movie-card">
-                        <figure class="poster-box card-banner">
-                            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                                class="img-cover">
-                        </figure>
 
-                        <h4 class="title">Puss in Boots: The Last Wish</h4>
+        <article class="container" page-content></article>
+    </main>
 
-                        <div class="meta-list">
-                            <div class="meta-item">
-                                <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                                <span class="span">8.4</span>
-                            </div>
-
-                            <div class="card-badge">2023</div>
-                        </div>
-
-                        <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                    </div>
-
-                    <div class="movie-card">
-                        <figure class="poster-box card-banner">
-                            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                                class="img-cover">
-                        </figure>
-
-                        <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                        <div class="meta-list">
-                            <div class="meta-item">
-                                <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                                <span class="span">8.4</span>
-                            </div>
-
-                            <div class="card-badge">2023</div>
-                        </div>
-
-                        <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                    </div>
-
-                    <div class="movie-card">
-                        <figure class="poster-box card-banner">
-                            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                                class="img-cover">
-                        </figure>
-
-                        <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                        <div class="meta-list">
-                            <div class="meta-item">
-                                <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                                <span class="span">8.4</span>
-                            </div>
-
-                            <div class="card-badge">2023</div>
-                        </div>
-
-                        <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                    </div>
-
-                    <div class="movie-card">
-                        <figure class="poster-box card-banner">
-                            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                                class="img-cover">
-                        </figure>
-
-                        <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                        <div class="meta-list">
-                            <div class="meta-item">
-                                <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                                <span class="span">8.4</span>
-                            </div>
-
-                            <div class="card-badge">2023</div>
-                        </div>
-
-                        <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                    </div>
-
-                    <div class="movie-card">
-                        <figure class="poster-box card-banner">
-                            <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                                class="img-cover">
-                        </figure>
-
-                        <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                        <div class="meta-list">
-                            <div class="meta-item">
-                                <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                                <span class="span">8.4</span>
-                            </div>
-
-                            <div class="card-badge">2023</div>
-                        </div>
-
-                        <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                    </div>
-
-                </div>
-            </div>
-
-        </section>
-
-    </article>
 
 </body>
 
