--- a/index.html
+++ b/index.html
@@ -69,19 +69,22 @@
         </button>
     </header>
 
-    <!-- 
-        - #SIDEBAR
-    -->
-    <nav class="sidebar" sidebar></nav>
-    <div class="overlay" overlay menu-toggler></div>
+
+    <main>
+
+        <!-- 
+         - #SIDEBAR
+        -->
+        <nav class="sidebar" sidebar></nav>
+        <div class="overlay" overlay menu-toggler></div>
 
 
 
 
 
-    <article class="container" page-content></article>
+        <article class="container" page-content></article>
 
-
+    </main>
 
 
 
