--- a/movie-list.html
+++ b/movie-list.html
@@ -30,7 +30,7 @@
         - custom js link
     -->
     <script src="./assets/js/global.js" defer></script>
-    <script src="./assets/js/detail.js" type="module"></script>
+    <script src="./assets/js/movie-list.js" type="module"></script>
 </head>
 
 <body>
@@ -65,11 +65,16 @@
         </button>
     </header>
 
-    <!-- 
-        - #SIDEBAR
-    -->
-    <nav class="sidebar" sidebar>
-        <div class="sidebar-inner">
+
+
+
+    <main>
+
+        <!-- 
+         - #SIDEBAR
+        -->
+        <nav class="sidebar" sidebar>
+            <!-- <div class="sidebar-inner">
 
             <div class="sidebar-list">
                 <p class="title">Genre</p>
@@ -86,8 +91,8 @@
                 <p class="title">Language</p>
 
                 <a href="./movie-list.html" menu-close class="sidebar-link">English</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Bengali</a>
+                <a href="./movie-list.html" menu-close class="sidebar-link">Uzbek</a>
+                <a href="./movie-list.html" menu-close class="sidebar-link">Russian</a>
             </div>
 
             <div class="sidebar-footer">
@@ -98,267 +103,16 @@
                 <img src="./assets/images/tmdb-logo.png" width="130" height="17" alt="the movie database logo">
             </div>
 
-        </div>
-    </nav>
-    <div class="overlay" overlay menu-toggler></div>
+        </div> -->
+        </nav>
+        <div class="overlay" overlay menu-toggler></div>
 
 
 
+        <article class="container" page-content></article>
 
+    </main>
 
-    <article class="container" page-content>
-
-        <!-- 
-            - #MOVIE LIST
-        -->
-        <section class="movie-list genre-list">
-
-            <div class="title-wraper">
-                <h1 class="heading">All Fantasy Movies</h1>
-            </div>
-
-            <div class="grid-list">
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-            </div>
-
-            <button class="btn load-more">Load More</button>
-
-        </section>
-
-    </article>
-
-
-    <div class="search-modal active">
-        <p class="label">Results for</p>
-
-        <h1 class="heading">Puss in Boots</h1>
-
-        <div class="movie-list">
-            <div class="grid-list">
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" alt="Puss in Boots: The Last Wish"
-                            class="img-cover">
-                    </figure>
-
-                    <h4 class="title">Puss in Boots: The Last Wish</h4>
-
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" loading="lazy" alt="rating">
-
-                            <span class="span">8.4</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="Puss in Boots: The Last Wish"></a>
-
-                </div>
-
-            </div>
-        </div>
-    </div>
 
 </body>
 
